tests/baselines/reference/uncaughtCompilerError2.errors.txt
==== tests/cases/compiler/uncaughtCompilerError2.ts (1 errors) ====
    function getObj() {
       ().toString();
        ~
!!! error TS1003: Identifier expected.
    }
    